# avatar-web

./: .env.example  .gitignore  Dockerfile  README.md  app.py  app_manager.ps1  app_manager.sh  chat.html  pyproject.toml  requirements.txt
app/: Dockerfile  app.py
app/handler/: websocket_handler.py
app/service/: architecture_diagram_service.py  avatar_service.py  chat_service.py  client_manager.py  config_service.py  stt_service.py  websocket_handler.py
app/static/: chat.html
app/static/css/: styles.css
app/static/js/: chat.js
app/util/: vad_iterator.py
static/: chat.html
static/css/: styles.css
static/js/: chat.js
